# cusolver_torch

./: .gitignore  README.md  pyproject.toml
examples/: smoke_test.py
src/cusolver_torch/: __init__.py  api.py  cusolver_torch_ext.cu
